Drop JDK 15 and 16 support