@@ -4,24 +4,19 @@
 
 ## setup
 
-- install jdk 15 or later
+- install jdk 17 or later
 - `build.sbt`
 
 ```scala
-// if jdk 15 or 16
-javacOptions ++= Seq("--enable-preview", "--release", scala.util.Properties.javaSpecVersion)
-
 scalaVersion := // 2.12.x or 2.13.x
 
 libraryDependencies += "com.github.xuwei-k" %% "shapeless-java-records" % "latest version"
 
+// if old scala version
 // https://github.com/scala/bug/issues/11908
 // https://github.com/scala/bug/issues/12159
 compileOrder := CompileOrder.JavaThenScala
 ```
-
-- run `sbt -J--enable-preview`
-
 
 ## usage
 
